--- a/Monument/Monuments.css
+++ b/Monument/Monuments.css
@@ -162,3 +162,29 @@ p {
     padding: 40px;
   }
 }
+@media only screen and (max-width: 600px) {
+    .header {
+        background-position: center;
+        font-size: 18px;
+    }
+
+    .header-container {
+        flex-direction: column;
+        height: auto;
+        padding: 10px 0;
+        gap: 10px;
+    }
+
+    .logo {
+        width: 100%;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .header-main {
+        flex-direction: column;
+        align-items: center;
+        gap: 10px;
+        width: 100%;
+    }
+}
